--- a/.github/workflows/hacs.yaml
+++ b/.github/workflows/hacs.yaml
@@ -13,3 +13,5 @@ jobs:
       - uses: actions/checkout@v4
       - name: HACS validation
         uses: hacs/action@main
+        with:
+          category: plugin
